# beecrab

./: .gitignore  Cargo.toml  README.md  readme.md
.cargo/: config.toml
src/: 1brc.c  core.rs  fnv.rs  lib.rs  main.rs  memchr.rs  metrics.rs  mmap.rs  table.rs
