[package]
name = "rowgobrrr"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.release]
opt-level = 3
debug = "full" # TODO: remove this when making production release; info useful only for debugging
# split-debuginfo = '...'
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false