[package]
name = "beecrab"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
rpath = false

[profile.profiling]
inherits = "release"
debug = true
strip = false
lto = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
gxhash = "3.5.0"
hashbrown = "0.17.0"
libc = "0.2.185"
